# ChangeLog for dev-db/phpmyadmin
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/phpmyadmin/ChangeLog,v 1.558 2015/03/30 10:06:51 ago Exp $

  30 Mar 2015; Agostino Sarubbo <ago@gentoo.org> phpmyadmin-4.0.10.9.ebuild,
  phpmyadmin-4.2.13.2.ebuild, phpmyadmin-4.3.12.ebuild:
  Stable for alpha, wrt bug #542218

  30 Mar 2015; Agostino Sarubbo <ago@gentoo.org> phpmyadmin-4.0.10.9.ebuild,
  phpmyadmin-4.2.13.2.ebuild, phpmyadmin-4.3.12.ebuild:
  Stable for sparc, wrt bug #542218

  26 Mar 2015; Agostino Sarubbo <ago@gentoo.org> phpmyadmin-4.0.10.9.ebuild,
  phpmyadmin-4.2.13.2.ebuild, phpmyadmin-4.3.12.ebuild:
  Stable for ppc64, wrt bug #542218

  26 Mar 2015; Agostino Sarubbo <ago@gentoo.org> phpmyadmin-4.0.10.9.ebuild,
  phpmyadmin-4.2.13.2.ebuild, phpmyadmin-4.3.12.ebuild:
  Stable for ppc, wrt bug #542218

  18 Mar 2015; Agostino Sarubbo <ago@gentoo.org> phpmyadmin-4.0.10.9.ebuild,
  phpmyadmin-4.2.13.2.ebuild, phpmyadmin-4.3.12.ebuild:
  Stable for amd64, wrt bug #542218

  18 Mar 2015; Andreas Schuerch <nativemad@gentoo.org>
  phpmyadmin-4.0.10.9.ebuild, phpmyadmin-4.2.13.2.ebuild,
  phpmyadmin-4.3.12.ebuild:
  x86 stable, see bug 542218

  16 Mar 2015; Jeroen Roovers <jer@gentoo.org> phpmyadmin-4.0.10.9.ebuild,
  phpmyadmin-4.2.13.2.ebuild, phpmyadmin-4.3.12.ebuild:
  Stable for HPPA (bug #542218).

*phpmyadmin-4.4.0_beta1 (14 Mar 2015)
*phpmyadmin-4.2.13.2 (14 Mar 2015)
*phpmyadmin-4.0.10.9 (14 Mar 2015)
*phpmyadmin-4.3.12 (14 Mar 2015)

  14 Mar 2015; Jorge Manuel B. S. Vicetto <jmbsvicetto@gentoo.org>
  +phpmyadmin-4.0.10.9.ebuild, +phpmyadmin-4.2.13.2.ebuild,
  +phpmyadmin-4.3.12.ebuild, +phpmyadmin-4.4.0_beta1.ebuild,
  -phpmyadmin-4.0.10.8.ebuild, -phpmyadmin-4.1.14.7.ebuild,
  -phpmyadmin-4.2.13.ebuild, -phpmyadmin-4.3.10.ebuild,
  -phpmyadmin-4.3.5.ebuild, -phpmyadmin-4.3.8.ebuild:
  Bump phpmyadmin to the latest releases and add 4.4.0_beta1. Address