@@ -4,32 +4,20 @@ Hash: SHA256
 AUX postinstall-en-3.1.txt 1160 SHA256 0fa47a49b9c5604339335d36ce9d1506a1cd07644d219fb7f35e2e4432fa8dbf SHA512 7b50ab9f9e3a828bd9bff600550ea97712c28804467ab5900a52710d4adb0581fe33155a965dd3956fcd36cc153b1a18a1f001d88ac52d70c8288faf695f01ec WHIRLPOOL 5b548fd9d41ca794f74936ce8ceda15c2c410cbc8d383c3376009a8936e47bc4d350c520ece1ff1eb20b0ac899f84fa513a185db5c255db362b7f3ee0b8f69ef
 DIST phpMyAdmin-4.0.10.9-all-languages.tar.xz 4776232 SHA256 ca8399711dcd613f3e13de706ced326885001a0891b31dc9677dd3a23cc78258 SHA512 fbc973b2719162c2aa8a7c88d395d513c2425259a3b69ecbdfc08f954c6dc25146fae41e4d67c57815782e3cf36580ef50ed870ee245463f59948f9062882b2a WHIRLPOOL 6dc1c230f3ed95ee828909d6b96fadcca25c19ea90fcdc38359d7ddd8ee8acf1724e9f4fd592ef60a6a41498badc1ec3ab983a36ca9f41f4e4e4efbed59952d0
 DIST phpMyAdmin-4.1.14.8-all-languages.tar.xz 4881004 SHA256 e2a2fee1658e3108048907a257b8f291fcfbd5840690e8f4711f9ea28233dce8 SHA512 34d28f04d6a808565ecc3d7187b2719d1e25e55d6248e3ea516e5914bd5a70aab0d9c4df3525cb8e77b37949a78671235af46e22871fe26ba999aa01b01c44d2 WHIRLPOOL a2e236a47154117c1bee3b9a51d4c3da9d1bd5834e3167174cbd80e562b5c14424b7e75de814f85d1ade1f6501b665a2af21cedd1c87be2ea6a9e151c0d8a2cf
-DIST phpMyAdmin-4.2.13.1-all-languages.tar.xz 5205324 SHA256 bc179dd35f6aa6d01b573f1e11b594d357fb2c09405b7fec06de5059adbec7c4 SHA512 121e6f063d7f4c4e8eaf048c9f68aaff713206ae077090fed671328f3fbd6f7d723309719c38e3a800c149630c1e2038b3f002bff7b48337278925cecf178b58 WHIRLPOOL 0bf85889e37f68907e8565a41d2e9ba804d41f8ad223a6d650117a93bd0900de242bed318a3cb467556b17eb2618d46571908090165cab666a2782a6f7465b3c
 DIST phpMyAdmin-4.2.13.2-all-languages.tar.xz 5204448 SHA256 3a8262fe392337d1963e8bc4364e280ced8ecace32c94cae0a4394cbf19256ee SHA512 944a324269b28290e57d15d7ed247594ab62c7117c763069ee4739c4bde2b09dbc59297745459dde4ec083771318ccb1f462eb828bdca31451fa13c5e9e2f6bd WHIRLPOOL bdeced7f9ff774be06c68c2b0dfd461133012530795b1530155f67d36a6ad6b9e9da418ce842ed1b79e900cf19fe0659547b0cd4c2ffd696e9f96b69d9b8eefb
 DIST phpMyAdmin-4.3.12-all-languages.tar.xz 5370996 SHA256 2ef69b32af8dfb51523378b654b0d3ee58a08fc80ab7ef2d1bdc38e0e26956ce SHA512 d7bb599ed3f2d5674e0b03df519a8c7a293f8a2814b7d28dab66161e0e3eb40e8e4943f436d113829df5187d1b802cb53dad7495efbeccc64f79d2190df4d688 WHIRLPOOL a008f10f2901fe774af151ac28230f0eb0294d74213a1a0f95909d5c98dee543b81647dbe9d5f014513743aca5d00847871506d46f5dcaf430e4936c493ff8be
 DIST phpMyAdmin-4.4.0-beta1-all-languages.tar.xz 5665800 SHA256 7d3379b377618850d358e6d2760c71f48616068fd7b454662866fa8f8ce90854 SHA512 8d77b437122da5f2315628d442eae9eacacab0c03f85a15026f991d09d7c5f0a5e8148414f77353a2f4b55a913eb4828e3c1781e84cf7a346791d7d5af21d15c WHIRLPOOL 89f6dc1b7fa64a33fa09b2a7cf0bf9510f5eee65f74e08f6920bdd64ae968d4182704f712a9d193c5ba301480c9b4ef29003d4d5b0a6c1e8c3945c730932b3b5
 EBUILD phpmyadmin-4.0.10.9.ebuild 1646 SHA256 f0bb884505916aa6f85ecf8144c7939851016aa7b3d82726f26fd3564a3b57ea SHA512 e12d82ebc71372ef65a729ee3e310c48f12d5dd06c28029e6894a654b4b36cb00a541f193edd69f4ccc6a90b7db3971e9d0d87f47608330362420508b9bc7e19 WHIRLPOOL 0c4c4ea8c1e61afa4f2fc50d6b09b89e042bc2bb1942ecc445851a2551ae1312c11053231463b72dbf855392ed327e01661c72d2d609eb8bad5d72fc3d691582
 EBUILD phpmyadmin-4.1.14.8.ebuild 1646 SHA256 11cc0cc63a068b4c5192882d2974daa1561d43f7f485d129fef2b74afc13be97 SHA512 2675f4de933d7db3de7b25fcd69c7716010cfa6ea323258003ce9f057f1f9685beb95b20ce0d9e5e234493a6e526cd86abe04ea818b6202db91bdd4824a791db WHIRLPOOL 9fa2cbe90f759924ff3c0bd474b4c0c234b559dc2d4b8d6ac02aa4240aec12ff0971c0195e7e24951e8c54b08de7ce7b2aabc3abbe922dbb1f64040ef8660409
-EBUILD phpmyadmin-4.2.13.1.ebuild 1646 SHA256 147bd411a460d775f4485928312133287ee23cd2c051a9f81bcd25dd50c7a33d SHA512 1bf74f1e06f1927c835f1c433139ac9b7c3b37de9f15c99e30a2013a232965b47d17c74b3fe61500c89cfc1438f412565b45ec00638e64381f6259a80d802fb9 WHIRLPOOL f4a46cc8cb47b2a750773382dfaa397b003505152134a16175ac527091c53839fd29dacf5149d9341f15a526e0abf7f77513a13f4512cb6e8995d922068682aa
 EBUILD phpmyadmin-4.2.13.2.ebuild 1646 SHA256 1982e9f6fa9073eb4b9dfbe8cfebf596bf9c48c9c3ef7458bd1daba9f4eabf31 SHA512 97fb23e06ac7bd1f8a2f1005a7e1c3a84e6f89f13fcb87415dc65c7cb0b9502caf6c2cf23c3d89dc2df47a37528e2354bbeafb290596408606b88f9fbe5e58c0 WHIRLPOOL 41f57f927b64d2d5b701f39cf953207c39210220aa2174beb8834fb3ac1723ae3e3a1339f2d93fc4fe9f9abced455d97775836040d3510f63352887e0a6a65cb
 EBUILD phpmyadmin-4.3.12.ebuild 1644 SHA256 91673e7ece5869bda620e3efc42c4faaaafc9d4c02f48713fbc91d1bcb920a79 SHA512 3cfc3e084b7c1d0714f7eb0da0ac54ba5cd63bec7268429f94d9335b33d6c9b59baced41f58e157310de3681bc220af947e5acefc4aa3e0e96d05a22ae505fe8 WHIRLPOOL afd1b42133b4206ed504240b01d1fe7dd839bb95af6b0fdfee2c8cce9e5c923d0a811ac9b232b6413c438fa4c460f74e79791af0f67e72e01d8db000a6536f35
 EBUILD phpmyadmin-4.4.0_beta1.ebuild 1664 SHA256 b0ec261053bacf7115830a04bb4e5b2c069d2a48e3a932a5d5e8e1d0035114d1 SHA512 6d1c3984b4f137afc76f1683d98010b23bbbd14c332b321656354ab0cb1b2fbd6c6b597b61012db9c63fd9b581ed1a912087e2d2d8b15205faeaf442e0e0da5a WHIRLPOOL 47265223e3a75839028f7bee6d606927f56c4cf5475a30fd0864c198c4f10991cbda54fe5e509ea5ed39088dca5553784926b91e43e264e001e2c717e0c82cd9
-MISC ChangeLog 78441 SHA256 6b0f6bed83837afe60f8bffe309db43b34ccf3b79d2b2b1357b2a87c4b8e747b SHA512 5ce75f2cd93fd638ccafc404aa84bab0d1925dbe6e58adeb05d76fa6e00a7dafb2bf0a31f80c3d8cbb1a16cee3ca069ef8ba593ab1eb1270e43908e40d9a3552 WHIRLPOOL 9160ca462842734293ce67af69c7b61ac8de380c40fc385451cb1dc3b6b43e7583da3f9f5c12fbbe94c13481593b0559d88c1cdea4cd6f95b586ac9f393bd04c
+MISC ChangeLog 78588 SHA256 717b12e705928beb72d778171273afc9b54dbeae341d6ca88bfd7f5a027219b5 SHA512 9abf76158f6fd2f7e9177ee8eae267c6e06fb01fec08719da774fe694f0352e34d60a22fe8ff374769991c3cead7fdde100a97700e4a3e481a8acec734ac74e3 WHIRLPOOL 004697a4f86a2d1647a9ea931a3b1c92eb71a46f5dd46882426d2db6a7f8170ffb21b0fc8a5fa8c19481e5b387378e600b4370aeb09f3d2bcc8e673b5fceed47
 MISC metadata.xml 519 SHA256 01d144b9a9bd96948c642f54fcad77c03644f4c19c6af44fb145713f01b1d6f5 SHA512 7ae636517f5937c91d0dbcf51b198d8860afdc1669033fbcb16583853976e534d16f4d2a7b8d9a33e4ba942869c788c5649019611fa4d4393f0b1726f6d01ce1 WHIRLPOOL 4318fba7507a02a52d396f32573c0d4e377141c169bd22f323f5006ad4e0cf69b70c1285de81e1ac8cbdeca0ef31fa3f797f21d97037fcc304d1c3c3a818e7a3
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVGSA8AAoJELp701BxlEWfyUcQAMTieRFOekJ85FSt9RNfMIAG
-VcbAb1vSiKmuYRKvfojeTbMbuCanQzAt7SD+23ljgBZ8fpmsxJeQtfDgVFv0Ep1T
-VZiMR5svkiKOOOkLh2+xD04u8vbRcle48BKp2C0IwhruUqwcvDSwJdNuXHIIWmeP
-U96voS15ts5UDb4xXn3qzOhG6C8aQBByZ+76t7sivIDgbc9mwHRUjtS3wePtXJ/R
-r7/PucLq3LpiLY1Jbf6sO/j3Z+ISIbpPPd4CqHTnykt6a+7TLAkFJmrGku9AQLZB
-4BcgkiiWFUYMLSOkxHG80fTlEr4yDr3MKudFQdHg1aML/LYasZRg8jz/0kizOlg6
-j+K7u4thKwen7bXC02TNTi/8rUAorp7ey8kLgQ8v8jNIvjwKlrwOrFlgUcN4b7WX
-DnN/NipuChkhbpko+iW5OZoX1bp5hBQ84/n/B0BAMKU+qiLgkTgX2PVlT0ZBGAb8
-s4z8+9DH1gczvVyWEjqdCFa5NacmWnKmIXadwK63SiCpwEig0Jgny1U7RcHARmnY
-EHU0uI0P1E8v6777pU01NVPScFg6g56HkQ3eRL4UNMOTCVYHhxeJqvnEL8YxC9Rw
-qeFYysV1yzDQNpVsREP8rrdrjGonMvSn95XeGIbb4V6hJ7RNoznDqQNc53Ar5pek
-ZdylWB4PWeSejySs/rHW
-=rMDe
+iF4EAREIAAYFAlU4VhoACgkQaezjy7sObpiqDgD/ZNAlcVSif9CjmxChLahgZc8v
+CXb6GKOF18lU0C9VZ0AA/jIIkx2zvuAgKL0W7oFP6GgdwRKswivLmPSZBtJpsuvP
+=fHio
 -----END PGP SIGNATURE-----
