@@ -1,13 +1,0 @@
-DEFINED_PHASES=install postinst prerm setup
-DEPEND=|| ( virtual/httpd-cgi virtual/httpd-fastcgi ) virtual/httpd-php >=app-admin/webapp-config-1.50.15
-DESCRIPTION=Web-based administration for MySQL database in PHP
-EAPI=5
-HOMEPAGE=http://www.phpmyadmin.net/
-IUSE=setup vhosts
-KEYWORDS=alpha amd64 hppa ~ia64 ppc ppc64 sparc x86 ~x86-fbsd ~ppc-macos ~x64-macos ~x86-macos
-LICENSE=GPL-2
-RDEPEND=dev-lang/php[crypt,ctype,filter,json,session,unicode] || ( dev-lang/php[mysqli] dev-lang/php[mysql] ) virtual/httpd-php >=app-admin/webapp-config-1.50.15
-SLOT=4.2.13.1
-SRC_URI=mirror://sourceforge/phpmyadmin/phpMyAdmin-4.2.13.1-all-languages.tar.xz
-_eclasses_=depend.php	df169a364e191b840b695604097e3c21	eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	phpconfutils	e108303831029e5b8a9d24b991b1d62a	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	webapp	25b9b1696f5e698711f47d45c3d45e3e
-_md5_=652e6b3e52d4594a9c754942a8be25bb
