@@ -11,22 +11,12 @@ EBUILD kmod-18-r1.ebuild 5232 SHA256 fe74bc461fc547d5363d4c01f29ab80e2fad1394775
 EBUILD kmod-19.ebuild 5014 SHA256 ffd93d2bec9245ff892d4020cbacd12560b9264c69c9fd397c7f121e72259cde SHA512 8307d19f57194033775613946effa496cf6e3002997c7823c6fe6980204ef6a20e0076c2cfd876b3a86fe059df8a7ed5e255206c49acdc0a87261e8d7befacaa WHIRLPOOL db16b33b70d69f3787ee88a09b1186c596ad98a10ab0180c2cf4994807b568a8bbfdc4d3c671bb2aab187425478116460de1eed28965f0ca1594ff86206eec2d
 EBUILD kmod-20.ebuild 5024 SHA256 e7dea60ead76a1b1873d03573167ccb1cde36c4f2e931aa0aaf733426e13554f SHA512 b0f16cc821cf806152d3b801e76eeac8a9432479a9cd2036d59bf6bf63891b792513dd0151467f622ae35267de03eef0c5f47035c47091c0690026172ab18fb3 WHIRLPOOL f0eb3e4c58b95786411c340f38865f9a7b5933d00f39c738a05d2d55f15255174733ef7b69fef1c5547454b3bb9d9718a9d95a16127027909ed5a179b465fc8c
 EBUILD kmod-9999.ebuild 5027 SHA256 57f7341df35dbb8d25d790f3d012e645a5914047cd65d3309e5cccb986271594 SHA512 c77f96dd8c3f0dd1679a71013d1aa27e491e64890fe3d0b6cd9c572ff87c9b88de13312912feff0acd905d06e7f4ef38c05a2537ee4cd10176a1060d88fccb23 WHIRLPOOL cebdd91defc8318a7d4ae29a7c35f1b27422633ab6bf52d266b55411e2a6c86dd757aef672a1d0d31e8438049f02ab51a3fa27c910c52e47994918dd4c3ca36c
-MISC ChangeLog 26880 SHA256 5c8d07e36c6d4d473f44598c3a16397ff428749a2862a73764ebfc95231c34c1 SHA512 2d701b9f929c784b9652be5fe1abd633e5c70f6b06e046792f9d31073d55da5bda71e54b793783a5ffdd5207a6e348f91441547c7d7f94aa83dce137287ecf2e WHIRLPOOL 2f7d48fc8ec07280b196fa7f34f63ddc79b526bdf6f7d7c2dfd3127a0cdb6ef0f34621db9b0103f7bf99020def1aca03d9db01f1f83eb46cf49a7a8a3bf82b01
-MISC metadata.xml 315 SHA256 615f47d63e08942e7a0c3cd3246f70d2f49b276aec75c84a9ec5e1188a91a18e SHA512 0f8bb9e3ba70ec5084d3c8a3fe8fba508dec2a33cb77cc13f3aba35c70b53d9011674a862033de6ba83aefb1b351b4d1fac7112d2e61070444620191f8ed8742 WHIRLPOOL 928f3536c928ba3457a2f94eb6de26e3c13f5a34748d554219edd8aa5841c24ebbc5930fcb147550c0cd9d8f5eae8f4a1cd04f3267ddbe066450178e38d7cb37
+MISC ChangeLog 26993 SHA256 884d948a9fcca840c5242556f20c3437351ae8eb956f343ff3cd18b6002c4e9a SHA512 400971e76bb245ef4d9a5be5d2ae25a5e49b14edfbd4ddece30c3a06be8aa1aee17b60ea810e5c7039052f5b8ad53daa8e8ca816f01ee531eac73fe09d7149b3 WHIRLPOOL 229bfb59a2569b8b0959464a054c4ed423435680336648df2703ecb1b854f44942d46b1e7f18005e195179d61bff77d0f49434bb2c6d017f059bf0bfa326d682
+MISC metadata.xml 445 SHA256 355b675fdbfffc098875cc02f60b3e4489f78e569fcf47b160f15a0a814fe9bd SHA512 55a0bbdccb5d0af3343e22cc4577bd946e39a19948df2fbe634729a1e0bbb43fc4d97ccf35e884253755182c2c1df33c354eb72ae52695ae530d01f01287d11f WHIRLPOOL 12e2201684ebef6c000dc57a87d92e035a74b71ceda56b6d77e67e705909f726df1fb95621eb51bb48e980583be5350c81b0bf3607a18f6fe34880f5ce8ea72a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVLQpAAAoJELp701BxlEWfHs0P/R7f7Ejp7MeXG0IfDuWTwAdw
-5qXQy+WSlEcMTqN9IfGU1o8KtPgOQUV0uIu8c6iI+hRrZtELIrgji3RNkUYmNdRi
-9I6uyI388ZOFn0LW+tzG+uW6+MTDbV/ywaoJfOgGX2tbMwwpT9MsOp9QJmPvgcqq
-M+ETcRnntUOkv5lTzHkOuT8KEX2e9vEzbsQKydhc4KncheynZ+6LdmioP/Wp1CGo
-fLahQlAAlUBGmXc7Eo/2zOt2yqTfWMy9bFV2cdojXlY9cg5KFxlPDOq/9uPjIrJE
-PCblhvOQ+K+EVLNiefTPFGu8o4wQOTFVmFMJdKpTf/Cj1tgjDpvulKCfovvQrps2
-uUJhJnaNTHknjCXO+hbD/XA/kf7yu040WFq80AtrLH22qj/jHosOzrLtkDunZp8j
-r5MQiDhXE1iLShXg952kY66kPfOxHKcaGr0cgPcNRYtQu95RtowaafKD22/Gye49
-hh3DlcTUZrrgA520MkTml6jYrEQAFpro/bppg2TKPjhCdx7jXhzsz7Dsvc+C5BX9
-MNOakLlSnCwPxNetu1q32zeQPAC8TIFkldSKl0wyp5z9lWx1ucX/WBm2dqlgjNuu
-l7RCgR4pnry9KNWXhjkiSOUeGtUHvBNmw2DwaKHqJykC3lyD/f+d6IHoZ/uSn4Un
-cQF6AjQAQcFb62uRPbpd
-=Vfil
+iF4EAREIAAYFAlU4WWAACgkQC77qH+pIQ6Q+GAEAqvZyYuXrS5daYo+CypNZFLEG
+/lkTJ4utT1+nLaOyUskBALIz8mbYieKGrdiA3reXOyVwcEojjkfiSmu9JoYNUoxx
+=NrjR
 -----END PGP SIGNATURE-----
